# ne-zalupa-mb

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.sh
shaders/: voxel.frag  voxel.vert
src/: main.cpp
src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Input.cpp  Input.h
src/rendering/: OpenGLUtils.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VoxelRenderer.cpp  VoxelRenderer.h
src/utils/: Math.h
src/world/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  WorldGenerator.cpp  WorldGenerator.h
